enhance code quality with ansible core v2.15

--- a/tasks/sub-tasks/install_binary.yml
+++ b/tasks/sub-tasks/install_binary.yml
@@ -72,7 +72,7 @@
   when: ansible_service_mgr == "sysvinit"
 
 # - name: "sysvinit enable"
-#   ansible.builtin.shell:
+#   ansible.builtin.command:
 #     cmd: "chkconfig {{ prometheus_keepalived_exporter_name }} on"
 #   when: ansible_service_mgr == "sysvinit"
 
