--- a/tasks/sub-tasks/install_binary.yml
+++ b/tasks/sub-tasks/install_binary.yml
@@ -1,88 +1,90 @@
 ---
-- name: "check current {{ prometheus_keepalived_exporter_name }} version"
-  ansible.builtin.stat:
-    path: "{{ prometheus_keepalived_exporter_bin_path }}"
+- name: Check current keepalived_exporter version
   failed_when: false
   changed_when: false
   register: prometheus_keepalived_exporter_bin_stat
+  ansible.builtin.stat:
+    path: "{{ prometheus_keepalived_exporter_bin_path }}"
 
-- name: "check current {{ prometheus_keepalived_exporter_name }} version"
-  ansible.builtin.command: "{{ prometheus_keepalived_exporter_bin_path }} --version"
+- name: Check current keepalived_exporter version
+  when: prometheus_keepalived_exporter_bin_stat.stat.exists
   failed_when: false
   changed_when: false
   register: prometheus_keepalived_exporter_version_check
-  when: prometheus_keepalived_exporter_bin_stat.stat.exists
+  ansible.builtin.command: "{{ prometheus_keepalived_exporter_bin_path }} --version"
 
-- name: "stop {{ prometheus_keepalived_exporter_name }}"
+- name: Stop keepalived_exporter
+  when: prometheus_keepalived_exporter_bin_stat.stat.exists
+  ignore_errors: true
   ansible.builtin.service:
     name: "{{ prometheus_keepalived_exporter_name }}"
     state: stopped
-    enabled: no
-  ignore_errors: true
-  when: prometheus_keepalived_exporter_bin_stat.stat.exists
+    enabled: false
 
-- name: "download and decompress {{ prometheus_keepalived_exporter_name }} into temporary location"
-  unarchive:
-    src: "{{ prometheus_keepalived_exporter_download_url | replace(' ','') }}"
-    dest: /tmp/
-    remote_src: true
-  when: not prometheus_keepalived_exporter_bin_stat.stat.exists
+- name: Download and decompress keepalived_exporter into temporary location
+  when:
+    not prometheus_keepalived_exporter_bin_stat.stat.exists
     or
     prometheus_keepalived_exporter_version_check.stdout is not defined
     or
     prometheus_keepalived_exporter_version not in prometheus_keepalived_exporter_version_check.stdout
+  ansible.builtin.unarchive:
+    src: "{{ prometheus_keepalived_exporter_download_url | replace(' ', '') }}"
+    dest: /tmp/
+    remote_src: true
 
-- name: "move {{ prometheus_keepalived_exporter_name }} binary into place"
+- name: Move keepalived_exporter binary into place
+  when:
+    not prometheus_keepalived_exporter_bin_stat.stat.exists
+    or
+    prometheus_keepalived_exporter_version_check.stdout is not defined
+    or
+    prometheus_keepalived_exporter_version not in prometheus_keepalived_exporter_version_check.stdout
   ansible.builtin.copy:
     # for v1.2.0 / v1.1.0
     # src: "/tmp/{{ prometheus_keepalived_exporter_name }}-{{ prometheus_keepalived_exporter_version }}.linux-{{ prometheus_keepalived_exporter_arch }}/{{ prometheus_keepalived_exporter_name }}"
     # for v1.3.0
-    src: "/tmp/{{ prometheus_keepalived_exporter_name }}"
+    src: /tmp/{{ prometheus_keepalived_exporter_name }}
     dest: "{{ prometheus_keepalived_exporter_bin_path }}"
-    mode: 0755
+    mode: "0755"
     remote_src: true
-  when: not prometheus_keepalived_exporter_bin_stat.stat.exists
-    or
-    prometheus_keepalived_exporter_version_check.stdout is not defined
-    or
-    prometheus_keepalived_exporter_version not in prometheus_keepalived_exporter_version_check.stdout
 
-- name: "create {{ prometheus_keepalived_exporter_name }} user"
-  user:
+- name: Create keepalived_exporter user
+  ansible.builtin.user:
     name: "{{ prometheus_keepalived_exporter_name }}"
     shell: /sbin/nologin
     state: present
 
-- name: "create {{ prometheus_keepalived_exporter_name }} systemd unit file"
+- name: Create keepalived_exporter systemd unit file
+  when: ansible_service_mgr == "systemd"
   ansible.builtin.template:
     src: exporter.service.j2
     dest: /etc/systemd/system/{{ prometheus_keepalived_exporter_name }}.service
-    mode: 0644
+    mode: "0644"
     owner: root
     group: root
-  when: ansible_service_mgr == "systemd"
 
-- name: "create {{ prometheus_keepalived_exporter_name }} sysv init file"
+- name: Create keepalived_exporter sysv init file
+  when: ansible_service_mgr == "sysvinit"
   ansible.builtin.template:
     src: exporter.j2
     dest: /etc/init.d/{{ prometheus_keepalived_exporter_name }}
-    mode: 0644
+    mode: "0644"
     owner: root
     group: root
-  when: ansible_service_mgr == "sysvinit"
 
 # - name: "sysvinit enable"
+#   when: ansible_service_mgr == "sysvinit"
 #   ansible.builtin.command:
 #     cmd: "chkconfig {{ prometheus_keepalived_exporter_name }} on"
-#   when: ansible_service_mgr == "sysvinit"
 
-- name: "systemd daemon-reload"
+- name: Systemd daemon-reload
+  when: ansible_service_mgr == "systemd"
   ansible.builtin.systemd:
     daemon_reload: true
-  when: ansible_service_mgr == "systemd"
 
-- name: "ensure {{ prometheus_keepalived_exporter_name }} is started"
+- name: Ensure keepalived_exporter is started
   ansible.builtin.service:
     name: "{{ prometheus_keepalived_exporter_name }}"
-    enabled: yes
+    enabled: true
     state: started
